--- a/client/src/styles/_addProduits.scss
+++ b/client/src/styles/_addProduits.scss
@@ -87,7 +87,11 @@
         font-family: 'Roboto', sans-serif;
         font-weight: 600;
     }
-   
+   .messg{
+    font-family: Roboto;
+    color: green;
+    font-size: 16px;
+   }
         input{
             margin-right: 30px;
             margin-top: 20px;
