--- a/client/src/styles/_ventes.scss
+++ b/client/src/styles/_ventes.scss
@@ -59,6 +59,11 @@
             color: red;
            }
         }
+        .messag{
+              font-family: 'Roboto';
+              font-size: 16px;
+              color:green
+        }
     }
     .inf{
         display: flex;
@@ -132,3 +137,4 @@
 .qtys{
     margin: 20px;
 }
+
