--- a/client/src/styles/_cout.scss
+++ b/client/src/styles/_cout.scss
@@ -7,11 +7,11 @@
     border:1px solid #dfdfdf;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px #d3d3d3;
-    width: 400px;
+    width: 300px;
     cursor: pointer;
     h1{
         font-family: Roboto;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
     }
     p{
@@ -20,7 +20,7 @@
 
     }
     .icon{
-        font-size: 40px;
+        font-size: 30px;
         color: blue;
     }
 }
@@ -34,11 +34,11 @@
     border:1px solid #dfdfdf;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px #d3d3d3;
-    width: 400px;
+    width: 300px;
     cursor: pointer;
     h1{
         font-family: Roboto;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
     }
     p{
@@ -47,8 +47,35 @@
 
     }
     .icon{
-        font-size: 40px;
+        font-size: 30px;
         color: rgb(252, 13, 13);
+    }
+}
+
+.coutprod{
+    padding: 15px;
+    margin: 5px;
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border:1px solid #dfdfdf;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px 2px #d3d3d3;
+    width: 400px;
+    cursor: pointer;
+    h1{
+        font-family: Roboto;
+        font-size: 18px;
+        font-weight: 600;
+    }
+    p{
+        font-size: 16px;
+        font-family: Roboto;
+
+    }
+    .icon{
+        font-size: 30px;
+        color: rgb(241, 8, 183);
     }
 }
 
@@ -65,7 +92,7 @@
     cursor: pointer;
     h1{
         font-family: Roboto;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
     }
     p{
@@ -74,7 +101,7 @@
 
     }
     .icon{
-        font-size: 40px;
+        font-size: 30px;
         color: rgb(252, 196, 13);
     }
 }
@@ -88,11 +115,11 @@
     border:1px solid #dfdfdf;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px #d3d3d3;
-    width: 600px;
+    width: 400px;
     cursor: pointer;
     h1{
         font-family: Roboto;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
     }
     p{
@@ -101,7 +128,7 @@
 
     }
     .icon{
-        font-size: 80px;
+        font-size: 50px;
         color: rgb(36, 172, 24);
     }
     .r{
@@ -118,11 +145,11 @@
     border:1px solid #dfdfdf;
     border-radius: 10px;
     box-shadow: 2px 2px 2px 2px #d3d3d3;
-    flex: 1;
+    width: 400px;
     cursor: pointer;
     h1{
         font-family: Roboto;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
     }
     p{
@@ -131,7 +158,7 @@
 
     }
     .icon{
-        font-size: 40px;
+        font-size: 30px;
         color: rgb(103, 182, 155);
     }
 }
@@ -149,7 +176,7 @@
     cursor: pointer;
     h1{
         font-family: Roboto;
-        font-size: 20px;
+        font-size: 18px;
         font-weight: 600;
     }
     p{
