--- a/client/src/styles/_depenseur.scss
+++ b/client/src/styles/_depenseur.scss
@@ -137,7 +137,7 @@
             font-size: 12px;
         }
         p{
-            font-family: Open sans;
+            font-family: sans-serif;
             font-size: 14px;
         }
        
