--- a/client/src/styles/_produits.scss
+++ b/client/src/styles/_produits.scss
@@ -26,7 +26,10 @@
     }
 
     .btn-add{
-        width: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 150px;
         height: 40px;
         border: none;
         text-transform: uppercase;
