--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -42,4 +42,6 @@ code {
 @import './styles/depenseur';
 @import './styles/listvente';
 @import './styles/single';
-@import './styles/tooltip'
+@import './styles/tooltip';
+@import './styles/recus';
+@import './styles/bestvente';
