--- a/client/src/styles/_addProduits.scss
+++ b/client/src/styles/_addProduits.scss
@@ -112,14 +112,14 @@
     margin-top: 20px;
     border: none;
     width: 100px;
-    height: 50px;
+    height: 40px;
     font-size: 16px;
     font-weight: 600;
     font-family: Open sans,sans-serif;
     background: #117dc5;
     color: #fff;
 }
-.messge{
+.messge-add{
     font-family: Roboto;
     color: green;
     font-size: 10px;
