--- a/client/src/styles/_rapports.scss
+++ b/client/src/styles/_rapports.scss
@@ -150,7 +150,8 @@
     visibility: visible;
   }
   .header-rapport {
-    display: none;
+   display: none;
+   //visibility: visible;
   }
 
   .filtre {
