--- a/client/src/styles/_recus.scss
+++ b/client/src/styles/_recus.scss
@@ -15,35 +15,79 @@
     }
   }
 
+  .entete{
+    display: flex;
+    align-items: center;
+    
+    h1{
+      font-size: 12px;
+      font-family: Roboto;
+      margin: 5px;
+    }
+    span{
+      font-family: Roboto;
+      margin:5px
+    }
+  }
+
   .container-recu{
     width: 100%;
-    display: flex;
-    flex-direction: column;
     background: #f0f2f5;
     border: 1px solid #d6d6d6;
   }
-  .nom-prod{
-    display: flex;
+  .ligne-recu{
     margin: 10px;
-    p{
-        font-family: Open sans;
-        font-size: 16px;
-        font-weight: 600;
-        margin:10px
-    }
-    span{
+    th{
         font-family: 'Roboto';
-        margin: 10px;
+        font-size: 14px;
+        font-weight: 500;
+        margin:10px;
+        padding: 5px;
+        border: 1px solid #d6d6d6;
+    }
+   
+  }
+
+  .ligne2-recu{
+    margin: 10px;
+    th{
+        font-family: sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+        margin:10px;
+        padding: 5px;
+        border: 1px solid #d6d6d6;
+    }
+   
+  }
+
+  .footer-recu{
+    margin: 10px;
+    .to{
+      display: flex;
+      p{
+        font-family: 'Roboto';
+        margin: 5px;
+        font-size: 14px;
+      }
+      span{
+        margin:5px;
+        font-family: 'Roboto';
+        font-size: 14px;
+      }
     }
   }
+
   .bt{
     margin: 10px;
     .btn-imp{
     margin: 20px;
     border: none;
-    width: 120px;
+    width: 200px;
     height: 40px;
-    background: #d6d6d6;
+    color: #f0f2f5;
+    //background: #d6d6d6;
+    background-color: rgb(223, 60, 60);
     font-family: sans-serif;
     }
   }
