--- a/client/src/styles/_ventes.scss
+++ b/client/src/styles/_ventes.scss
@@ -100,7 +100,7 @@
     background: #6f88af;
     margin: 20px;
     border: none;
-    box-shadow: -2px -2px 2px 2px #226faf;
+    //box-shadow: -2px -2px 2px 2px #226faf;
     border-radius: 5px;
     &:hover{
         background: #157dd3;
@@ -115,7 +115,7 @@
     background: #36da4b;
     margin: 20px;
     border: none;
-    box-shadow: -2px -2px 2px 2px #23c46b;
+    //box-shadow: -2px -2px 2px 2px #23c46b;
     border-radius: 5px;
     &:hover{
         background: #15d33e;
@@ -159,7 +159,7 @@
     width: 150px;
 }
 
-.messag{
+.message-vente{
     font-family: 'Roboto';
     font-size: 20px;
     color:green;
