--- a/client/src/styles/_listvente.scss
+++ b/client/src/styles/_listvente.scss
@@ -56,3 +56,12 @@
        font-weight: 600;
     }
 }
+
+.messge-vente-list{
+    font-family: Roboto;
+    color: rgb(254, 255, 254);
+    font-size: 16px;
+    position: absolute;
+    top: 20px;
+    right: 50px;
+   }
