--- a/client/src/styles/_single.scss
+++ b/client/src/styles/_single.scss
@@ -92,7 +92,7 @@
     margin-top: 20px;
     border: none;
     width: 100px;
-    height: 50px;
+    height: 40px;
     font-size: 16px;
     font-weight: 600;
     font-family: Open sans,sans-serif;
@@ -104,10 +104,17 @@
     margin-top: 20px;
     border: none;
     width: 100px;
-    height: 50px;
+    height: 40px;
     font-size: 16px;
     font-weight: 600;
     font-family: Open sans,sans-serif;
     background: #e93232;
     color: #fff;
 }
+
+.messge-single{
+    font-family: Roboto;
+    color: green;
+    font-size: 10px;
+    font-size: 20px;
+   }
